--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-hacker
 title: CODEMONDAY Exam
 description: This is for developer skill and solution screening
